# simulacion-clinica-heparina

./: .gitignore  =3.9  AGENTS.md  README.md  flowchart.md  pyproject.toml  simulacion-clinica-ctk.spec  simulacion-clinica.spec  simulacion-dialisis.md
simulacion_clinica/: config.py  generadores.py  main.py  main_optimizacion.py  optimizacion.py  simulacion.py
simulacion_clinica/tests/: test_generadores.py  test_optimizacion.py  test_simulacion.py
simulacion_clinica/ui/: app.py  config_state.py  launcher.py  utils.py
simulacion_clinica/ui/components/: charts.py  data_table.py
simulacion_clinica/ui/views/: config_view.py  optimizacion_view.py  simulacion_view.py
simulacion_clinica/ui_ctk/: app.py  charts.py  config_panel.py  launcher.py  optimizacion_tab.py  simulacion_tab.py  tablas.py
